--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,11 @@
     <color name="student_icon_color">#454545</color>
     <color name="transparent_black2">#A93C3C3C</color>
     <color name="white_70">#B3FFFFFF</color>
+    <color name="gray">#E4E4E4</color>
+    <color name="darkGray">#B8B8B8</color>
+    <color name="bottom_sheet_top_line_color">#2E2E2E</color>
 
     <color name="green">#2A8C2A</color>
     <color name="orange">#FF9100</color>
-    <color name="red">#f00</color>
+    <color name="red">#FF0000</color>
 </resources>
