--- a/app/src/main/res/layout/row_activity_details.xml
+++ b/app/src/main/res/layout/row_activity_details.xml
@@ -13,19 +13,9 @@
         android:id="@+id/tvIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         tools:text="Ab" />
-
-
-    <TextView
-        android:id="@+id/tvType"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_weight="0.4"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintStart_toEndOf="@id/tvIcon"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Zadovoljava" />
 
     <TextView
         android:id="@+id/tvDescription"
@@ -34,9 +24,6 @@
         android:layout_marginHorizontal="10dp"
         android:layout_weight="1"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintEnd_toStartOf="@id/tvDate"
-        app:layout_constraintStart_toEndOf="@id/tvType"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="Pjesmicu Ucimo slova Kemala Handana je djelimicno naucila" />
 
     <TextView
@@ -44,7 +31,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="22.09.2021." />
 </LinearLayout>
