Updated to version 1.2.1

--- a/app/src/main/res/layout/row_student_select.xml
+++ b/app/src/main/res/layout/row_student_select.xml
@@ -10,11 +10,11 @@
         android:id="@+id/ivIcon"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:tint="@color/student_icon_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_student_female" />
+        tools:src="@drawable/ic_student_female"
+        app:tint="@color/student_icon_color" />
 
     <TextView
         android:id="@+id/tvName"
