--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top"
         android:layout_marginTop="50dp"
-        android:fontFamily="cursive"
+        android:fontFamily="@font/font_dancing_script"
         android:gravity="center_horizontal"
         android:text="@string/app_name" />
 
